# stoneng

./: .gitignore  Cargo.toml  LICENSE  README.md  Session.vim  TODO.md
assets/shaders/: frag.glsl  sprite_geom.glsl  sprite_vert.glsl  vert.glsl
assets/shaders/lightmap/: frag.glsl  geom.glsl  vert.glsl
assets/shaders/shadowmask/: frag.glsl  vert.glsl
assets/shaders/sprite/: frag.glsl  geom.glsl  vert.glsl
assets/shaders/text/: frag.glsl  geom.glsl  vert.glsl
assets/test/textures/: atlas.ron
assets/textures/: atlas.ron  sprites.ron
src/: engine.rs  game.rs  main.rs
src/engine/: error.rs  event.rs  mod.rs  shader.rs
src/engine/renderer/: mod.rs  sprite.rs
src/game/: animation.rs  mod.rs  player.rs
src/stoneng/: error.rs  event.rs  lib.rs  quadtree.rs  shader.rs  sprite.rs  spritesheet.rs
src/stoneng/audio/: mod.rs
src/stoneng/controller/: mod.rs  player.rs
src/stoneng/ecs/: component.rs  mod.rs  resource.rs  system.rs
src/stoneng/ecs/component/: collision.rs  mod.rs  particle.rs  physics.rs  sprite.rs  tile.rs  transform.rs
src/stoneng/ecs/system/: collision.rs  light.rs  mod.rs  movement.rs  particle.rs  sprite.rs  text.rs
src/stoneng/model/: mod.rs  sprite.rs  spritesheet.rs  tilemap.rs
src/stoneng/renderer/: light.rs  mod.rs  sprite.rs  text.rs
