[package]
name = "rustylantern"
version = "0.1.0"
edition = "2018"

[lib]
name = "stoneng"
path = "src/stoneng/lib.rs"

[[bin]]
name = "rustylantern"
path = "src/main.rs"

[dependencies]
gl = "0.14"
nalgebra-glm = "0"
stb_image = "0.2.3"

glutin = "0.27.0"

# (de)serializing
serde = { version = "1.0", features = ["derive", "rc"] }
ron = "0.6.5"


