[package]
name = "rustylantern"
version = "0.1.0"
edition = "2018"

[lib]
name = "stoneng"
path = "src/stoneng/lib.rs"

[[bin]]
name = "rustylantern"
path = "src/main.rs"

[dependencies]
# Window/Graphics
gl = "0.14"
glutin = "0.27.0"
nalgebra-glm = "0"
stb_image = "0.2.3"

# Data Structure
specs = { version ="0.17", features = ["specs-derive", "shred-derive"] }

# (de)serializing
serde = { version = "1.0", features = ["derive", "rc"] }
ron = "0.6.5"

lazy_static = "1.4"
rand = "*"

